--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asanaverse 🔮 KI-Assistent</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <style>
         body { background-color: #f8f6f1; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; color: #1a3b3b; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
         .chat-container { width: 90%; max-width: 600px; height: 80vh; background-color: #ffffff; border-radius: 18px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); display: flex; flex-direction: column; overflow: hidden; }
-        .chat-header { background-color: #f88c57; color: white; padding: 1rem; text-align: center; font-size: 1.2rem; font-weight: bold; }
         .chat-messages { flex-grow: 1; padding: 1.5rem; overflow-y: auto; display: flex; flex-direction: column; gap: 1rem; }
-        .message { padding: 0.8rem 1.2rem; border-radius: 12px; max-width: 80%; line-height: 1.5; }
+        .message { padding: 0.8rem 1.2rem; border-radius: 12px; max-width: 80%; line-height: 1.5; word-wrap: break-word; }
         .user-message { background-color: #e0dcd2; color: #1a3b3b; align-self: flex-end; border-bottom-right-radius: 0; }
         .bot-message { background-color: #f0f0f0; align-self: flex-start; border-bottom-left-radius: 0; }
+        .bot-message p:first-child { margin-top: 0; }
+        .bot-message p:last-child { margin-bottom: 0; }
         .bot-message a { color: #f88c57; font-weight: bold; text-decoration: none; }
         .bot-message a:hover { text-decoration: underline; }
         .chat-input { display: flex; padding: 1rem; border-top: 1px solid #e0dcd2; }
         #user-input { flex-grow: 1; padding: 0.8rem; border-radius: 12px; border: 1px solid #ccc; font-size: 1rem; resize: none; }
         #send-button { background-color: #f88c57; color: white; border: none; padding: 0.8rem 1.2rem; font-size: 1rem; border-radius: 12px; cursor: pointer; margin-left: 0.8rem; }
-        .loading-indicator { align-self: flex-start; color: #999; font-style: italic; }
     </style>
 </head>
 <body>
     <div class="chat-container">
-        <div class="chat-header">Dein Asana-Berater</div>
         <div class="chat-messages" id="chat-messages">
-            <div class="message bot-message">Hallo! Ich bin dein persönlicher Asana-Berater. Wie kann ich dir heute helfen?</div>
+            <div class="message bot-message"><p>Hallo. Wobei kann ich dir Orientierung geben?</p></div>
         </div>
         <div class="chat-input">
             <textarea id="user-input" placeholder="Stelle deine Frage..." rows="1"></textarea>
@@ -34,20 +34,30 @@
     <script>
         const userInput = document.getElementById('user-input');
         const chatMessages = document.getElementById('chat-messages');
+        const sendButton = document.getElementById('send-button');
+
         userInput.addEventListener('keydown', (event) => { if (event.key === 'Enter' && !event.shiftKey) { event.preventDefault(); sendMessage(); } });
+
         async function sendMessage() {
             const query = userInput.value.trim();
             if (!query) return;
+
+            sendButton.disabled = true;
+            userInput.disabled = true;
+
             const userMessageDiv = document.createElement('div');
             userMessageDiv.className = 'message user-message';
             userMessageDiv.textContent = query;
             chatMessages.appendChild(userMessageDiv);
             userInput.value = '';
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+
             const loadingDiv = document.createElement('div');
-            loadingDiv.className = 'message bot-message loading-indicator';
-            loadingDiv.textContent = '🧘‍♀️ Denkt nach...';
+            loadingDiv.className = 'message bot-message';
+            loadingDiv.textContent = '🧘‍♀️ ...';
             chatMessages.appendChild(loadingDiv);
             chatMessages.scrollTop = chatMessages.scrollHeight;
+
             try {
                 const response = await fetch('/api/chat', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ query }) });
                 if (!response.ok) {
@@ -55,15 +65,16 @@
                     throw new Error(errorResult.message || 'Serverfehler');
                 }
                 const result = await response.json();
-                loadingDiv.remove();
-                const botMessageDiv = document.createElement('div');
-                botMessageDiv.className = 'message bot-message';
-                botMessageDiv.innerHTML = result.reply;
-                chatMessages.appendChild(botMessageDiv);
+                // Wandle die Antwort (die HTML enthalten kann) um und zeige sie an
+                loadingDiv.innerHTML = marked.parse(result.reply);
             } catch (error) {
                 loadingDiv.innerHTML = `❌ Fehler: ${error.message}`;
+            } finally {
+                sendButton.disabled = false;
+                userInput.disabled = false;
+                userInput.focus();
+                chatMessages.scrollTop = chatMessages.scrollHeight;
             }
-            chatMessages.scrollTop = chatMessages.scrollHeight;
         }
     </script>
 </body>
