--- a/index.html
+++ b/index.html
@@ -2,96 +2,66 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Asanaverse 🔮 KI-Assistent</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      width: 100%;
       background-color: #f8f6f1;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-      color: #1a3b3b;
+      font-family: sans-serif;
     }
 
     .chat-container {
-      width: 100%;
-      height: 100%;
-      background-color: #ffffff;
-      border-radius: 18px;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       display: flex;
       flex-direction: column;
-      overflow: hidden;
-      box-sizing: border-box;
+      height: 100%;
     }
 
     .chat-messages {
       flex-grow: 1;
-      padding: 1.5rem;
       overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
+      padding: 1rem;
     }
 
     .message {
-      padding: 0.8rem 1.2rem;
-      border-radius: 12px;
       max-width: 80%;
-      line-height: 1.5;
-      word-wrap: break-word;
+      padding: 1rem;
+      margin: 0.5rem;
+      border-radius: 12px;
     }
 
     .user-message {
       background-color: #e0dcd2;
-      color: #1a3b3b;
       align-self: flex-end;
-      border-bottom-right-radius: 0;
     }
 
     .bot-message {
       background-color: #f0f0f0;
       align-self: flex-start;
-      border-bottom-left-radius: 0;
-    }
-
-    .bot-message p:first-child { margin-top: 0; }
-    .bot-message p:last-child { margin-bottom: 0; }
-    .bot-message a {
-      color: #f88c57;
-      font-weight: bold;
-      text-decoration: none;
-    }
-    .bot-message a:hover {
-      text-decoration: underline;
     }
 
     .chat-input {
       display: flex;
       padding: 1rem;
-      border-top: 1px solid #e0dcd2;
+      border-top: 1px solid #ccc;
     }
 
     #user-input {
       flex-grow: 1;
       padding: 0.8rem;
-      border-radius: 12px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-      resize: none;
+      border-radius: 8px;
     }
 
     #send-button {
+      margin-left: 1rem;
       background-color: #f88c57;
       color: white;
       border: none;
+      border-radius: 8px;
       padding: 0.8rem 1.2rem;
-      font-size: 1rem;
-      border-radius: 12px;
       cursor: pointer;
-      margin-left: 0.8rem;
     }
   </style>
 </head>
@@ -103,68 +73,4 @@
       </div>
     </div>
     <div class="chat-input">
-      <textarea id="user-input" placeholder="Was hilft bei innerer Unruhe oder Vata-Überschuss?" rows="1"></textarea>
-      <button id="send-button" onclick="sendMessage()">Senden</button>
-    </div>
-  </div>
-
-  <script>
-    const userInput = document.getElementById('user-input');
-    const chatMessages = document.getElementById('chat-messages');
-    const sendButton = document.getElementById('send-button');
-
-    userInput.addEventListener('keydown', (event) => {
-      if (event.key === 'Enter' && !event.shiftKey) {
-        event.preventDefault();
-        sendMessage();
-      }
-    });
-
-    async function sendMessage() {
-      const query = userInput.value.trim();
-      if (!query) return;
-
-      sendButton.disabled = true;
-      userInput.disabled = true;
-
-      const userMessageDiv = document.createElement('div');
-      userMessageDiv.className = 'message user-message';
-      userMessageDiv.textContent = query;
-      chatMessages.appendChild(userMessageDiv);
-      userInput.value = '';
-      chatMessages.scrollTop = chatMessages.scrollHeight;
-
-      const loadingDiv = document.createElement('div');
-      loadingDiv.className = 'message bot-message';
-      loadingDiv.textContent = '🧘‍♀️ Suche nach passenden Asanas...';
-      chatMessages.appendChild(loadingDiv);
-      chatMessages.scrollTop = chatMessages.scrollHeight;
-
-      try {
-        const response = await fetch('/api/assistant', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ prompt: query })
-        });
-
-        if (!response.ok) {
-          const errorResult = await response.json();
-          throw new Error(errorResult.message || 'Serverfehler');
-        }
-
-        const result = await response.json();
-        loadingDiv.innerHTML = result.result;
-
-      } catch (error) {
-        console.error('Frontend Error:', error);
-        loadingDiv.innerHTML = `❌ Verbindungsfehler: Bitte versuche es erneut.`;
-      } finally {
-        sendButton.disabled = false;
-        userInput.disabled = false;
-        userInput.focus();
-        chatMessages.scrollTop = chatMessages.scrollHeight;
-      }
-    }
-  </script>
-</body>
-</html>
+      <textarea id="user-input" rows="1" placeholder="Was hilft bei
