--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
       flex-grow: 1;
       overflow-y: auto;
       padding: 1rem;
+      display: flex;
+      flex-direction: column;
     }
 
     .message {
       max-width: 80%;
       padding: 1rem;
-      margin: 0.5rem;
+      margin: 0.5rem 0;
       border-radius: 12px;
+      word-wrap: break-word;
     }
 
     .user-message {
@@ -42,6 +45,11 @@
       align-self: flex-start;
     }
 
+    .bot-message a {
+      color: #f88c57;
+      font-weight: bold;
+    }
+
     .chat-input {
       display: flex;
       padding: 1rem;
@@ -52,6 +60,8 @@
       flex-grow: 1;
       padding: 0.8rem;
       border-radius: 8px;
+      border: 1px solid #ccc;
+      resize: none;
     }
 
     #send-button {
@@ -104,9 +114,11 @@
 
       const loadingDiv = document.createElement('div');
       loadingDiv.className = 'message bot-message';
-      loadingDiv.textContent = '🧘‍♀️ Suche nach passenden Asanas...';
+      loadingDiv.innerHTML = '<p>🧘‍♀️ Suche nach passenden Asanas...</p>';
       chatMessages.appendChild(loadingDiv);
       chatMessages.scrollTop = chatMessages.scrollHeight;
+
+      userInput.value = '';
 
       try {
         const res = await fetch('/api/assistant', {
@@ -131,10 +143,18 @@
         try {
           const parsed = JSON.parse(rawText);
 
-          if (Array.isArray(parsed)) {
+          if (Array.isArray(parsed) && parsed.length > 0) {
             let html = '<p>Hier sind passende Asanas:</p><ul>';
             parsed.forEach(item => {
-              html += `<li><strong>${item.name}</strong>: ${item.begruendung} <a href="${item.url}" target="_blank">Zum Asana</a></li>`;
+              const name = item.name || 'Unbekanntes Asana';
+              const begruendung = item.begruendung || 'Hilfreich für deine Praxis';
+              const url = item.url;
+              
+              if (url && url !== 'null') {
+                html += `<li><strong>${name}</strong>: ${begruendung} <a href="${url}" target="_blank">→ Zum Asana</a></li>`;
+              } else {
+                html += `<li><strong>${name}</strong>: ${begruendung}</li>`;
+              }
             });
             html += '</ul>';
             loadingDiv.innerHTML = html;
@@ -143,16 +163,15 @@
           }
 
         } catch (e) {
-          loadingDiv.innerHTML = `<p>${rawText}</p><p><em>(Kein JSON)</em></p>`;
+          loadingDiv.innerHTML = `<p>${rawText}</p>`;
         }
 
       } catch (err) {
         console.error(err);
-        loadingDiv.innerHTML = '❌ Verbindungsfehler: Bitte versuche es erneut.';
+        loadingDiv.innerHTML = '<p>❌ Verbindungsfehler: Bitte versuche es erneut.</p>';
       } finally {
         sendButton.disabled = false;
         userInput.disabled = false;
-        userInput.value = '';
         userInput.focus();
         chatMessages.scrollTop = chatMessages.scrollHeight;
       }
