--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     }
 
     .chat-container {
-      display: flex;
+    display: flex;
       flex-direction: column;
       height: 100%;
+      background-color: #ffffff; /* weißer Chat-Hintergrund */
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+      margin: 1rem; /* optional: etwas Abstand zum Rand */
     }
 
     .chat-messages {
