--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      background-color: #ffffff;
+      background-color: #f8f6f1;
       font-family: sans-serif;
     }
 
